--- a/OmahSoftware/OmahSoftware/App.config
+++ b/OmahSoftware/OmahSoftware/App.config
@@ -2,17 +2,18 @@
 <configuration>
     <connectionStrings>
 
-      <!-- 
-<add name="databaseosw" connectionString="server=localhost;user id=root; password=root; database=osw_kontenu;persist security info=true;CharSet=utf8;default command timeout=0;" />
-<add name="databaseoswreport" connectionString="XpoProvider=MySql;server=localhost;user id=root; password=root; database=osw_kontenu;persist security info=true;CharSet=utf8;default command timeout=0;" />
--->
+      <!-- -->
+<add name="databaseosw" connectionString="server=localhost;user id=root; password=; database=osw_kontenu;persist security info=true;CharSet=utf8;default command timeout=0;" />
+<add name="databaseoswreport" connectionString="XpoProvider=MySql;server=localhost;user id=root; password=; database=osw_kontenu;persist security info=true;CharSet=utf8;default command timeout=0;" />
+
       
 <!-- http://192.168.1.150/installer/ -->
       
-      <!-- -->
+      <!-- 
       <add name="databaseosw" connectionString="server=192.168.1.121;user id=oswuser; password=omahsoftware123user; database=osw_kontenu; port=3306;persist security info=true;CharSet=utf8;" />
       <add name="databaseoswreport" connectionString="XpoProvider=MySql;server=192.168.1.121;user id=oswuser; password=omahsoftware123user; port=3306; database=osw_kontenu;persist security info=true;CharSet=utf8;" />
-
+-->
+      
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
