--- a/OmahSoftware/OmahSoftware/OmahSoftware.csproj
+++ b/OmahSoftware/OmahSoftware/OmahSoftware.csproj
@@ -127,6 +127,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Design\Data\DataOutsource.cs" />
+    <Compile Include="Design\Form\FrmOutsource.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\FrmOutsource.designer.cs">
+      <DependentUpon>FrmOutsource.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Design\Form\FrmOutsourceAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\FrmOutsourceAdd.designer.cs">
+      <DependentUpon>FrmOutsourceAdd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -287,6 +300,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>XRDesignRibbonControllerResources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Design\Form\FrmOutsource.resx">
+      <DependentUpon>FrmOutsource.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Design\Form\FrmOutsourceAdd.resx">
+      <DependentUpon>FrmOutsourceAdd.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Sistem\SisHakAkses.resx">
       <DependentUpon>SisHakAkses.cs</DependentUpon>
@@ -2514,7 +2533,9 @@
       <FileType>Assembly</FileType>
     </PublishFile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Design\Laporan\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
