--- a/OmahSoftware/OmahSoftware/OmahSoftware.csproj
+++ b/OmahSoftware/OmahSoftware/OmahSoftware.csproj
@@ -127,12 +127,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Design\Data\DataJabatan.cs" />
     <Compile Include="Design\Data\DataOutsource.cs" />
+    <Compile Include="Design\Form\FrmJabatan.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\FrmJabatan.designer.cs">
+      <DependentUpon>FrmJabatan.cs</DependentUpon>
+    </Compile>
     <Compile Include="Design\Form\FrmOutsource.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Design\Form\FrmOutsource.designer.cs">
       <DependentUpon>FrmOutsource.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Design\Form\FrmJabatanAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\FrmJabatanAdd.designer.cs">
+      <DependentUpon>FrmJabatanAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="Design\Form\FrmOutsourceAdd.cs">
       <SubType>Form</SubType>
@@ -300,8 +313,14 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>XRDesignRibbonControllerResources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Design\Form\FrmJabatan.resx">
+      <DependentUpon>FrmJabatan.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\FrmOutsource.resx">
       <DependentUpon>FrmOutsource.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Design\Form\FrmJabatanAdd.resx">
+      <DependentUpon>FrmJabatanAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\FrmOutsourceAdd.resx">
       <DependentUpon>FrmOutsourceAdd.cs</DependentUpon>
