--- a/OmahSoftware/OmahSoftware/OmahSoftware.csproj
+++ b/OmahSoftware/OmahSoftware/OmahSoftware.csproj
@@ -128,12 +128,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Design\Data\DataJabatan.cs" />
+    <Compile Include="Design\Data\DataPIC.cs" />
     <Compile Include="Design\Data\DataOutsource.cs" />
     <Compile Include="Design\Form\FrmJabatan.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Design\Form\FrmJabatan.designer.cs">
       <DependentUpon>FrmJabatan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Design\Form\FrmPIC.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\FrmPIC.designer.cs">
+      <DependentUpon>FrmPIC.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Design\Form\FrmPICAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\FrmPICAdd.designer.cs">
+      <DependentUpon>FrmPICAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="Design\Form\FrmOutsource.cs">
       <SubType>Form</SubType>
@@ -315,6 +328,12 @@
     </Compile>
     <EmbeddedResource Include="Design\Form\FrmJabatan.resx">
       <DependentUpon>FrmJabatan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Design\Form\FrmPIC.resx">
+      <DependentUpon>FrmPIC.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Design\Form\FrmPICAdd.resx">
+      <DependentUpon>FrmPICAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\FrmOutsource.resx">
       <DependentUpon>FrmOutsource.cs</DependentUpon>
