--- a/OmahSoftware/OmahSoftware/OmahSoftware.csproj
+++ b/OmahSoftware/OmahSoftware/OmahSoftware.csproj
@@ -127,10 +127,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Design\Data\DataJasa.cs" />
     <Compile Include="Design\Data\DataUnit.cs" />
     <Compile Include="Design\Data\DataJabatan.cs" />
     <Compile Include="Design\Data\DataPIC.cs" />
     <Compile Include="Design\Data\DataOutsource.cs" />
+    <Compile Include="Design\Form\FrmJasa.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\FrmJasa.designer.cs">
+      <DependentUpon>FrmJasa.cs</DependentUpon>
+    </Compile>
     <Compile Include="Design\Form\FrmUnit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -142,6 +149,12 @@
     </Compile>
     <Compile Include="Design\Form\FrmJabatan.designer.cs">
       <DependentUpon>FrmJabatan.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Design\Form\FrmJasaAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\FrmJasaAdd.designer.cs">
+      <DependentUpon>FrmJasaAdd.cs</DependentUpon>
     </Compile>
     <Compile Include="Design\Form\FrmUnitAdd.cs">
       <SubType>Form</SubType>
@@ -339,11 +352,17 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>XRDesignRibbonControllerResources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Design\Form\FrmJasa.resx">
+      <DependentUpon>FrmJasa.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\FrmUnit.resx">
       <DependentUpon>FrmUnit.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\FrmJabatan.resx">
       <DependentUpon>FrmJabatan.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Design\Form\FrmJasaAdd.resx">
+      <DependentUpon>FrmJasaAdd.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\FrmUnitAdd.resx">
       <DependentUpon>FrmUnitAdd.cs</DependentUpon>
