--- a/Kontenu/Kontenu/Kontenu.csproj
+++ b/Kontenu/Kontenu/Kontenu.csproj
@@ -127,6 +127,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Design\Data\DataJenisProyek.cs" />
     <Compile Include="Design\Data\DataJasaOutsource.cs" />
     <Compile Include="Design\Data\DataJasa.cs" />
     <Compile Include="Design\Data\DataPerusahaan.cs" />
@@ -135,6 +136,18 @@
     <Compile Include="Design\Data\DataJabatan.cs" />
     <Compile Include="Design\Data\DataPIC.cs" />
     <Compile Include="Design\Data\DataOutsource.cs" />
+    <Compile Include="Design\Form\FrmJenisProyek.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\FrmJenisProyek.designer.cs">
+      <DependentUpon>FrmJenisProyek.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Design\Form\FrmJenisProyekAdd.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Design\Form\FrmJenisProyekAdd.designer.cs">
+      <DependentUpon>FrmJenisProyekAdd.cs</DependentUpon>
+    </Compile>
     <Compile Include="Design\Form\FrmJasaOutsource.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -378,6 +391,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>XRDesignRibbonControllerResources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Design\Form\FrmJenisProyek.resx">
+      <DependentUpon>FrmJenisProyek.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Design\Form\FrmJenisProyekAdd.resx">
+      <DependentUpon>FrmJenisProyekAdd.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\FrmJasaOutsource.resx">
       <DependentUpon>FrmJasaOutsource.cs</DependentUpon>
     </EmbeddedResource>
