cetak quotation DONE

--- a/Kontenu/Kontenu/Kontenu.csproj
+++ b/Kontenu/Kontenu/Kontenu.csproj
@@ -140,6 +140,12 @@
     <Compile Include="Design\Data\DataJabatan.cs" />
     <Compile Include="Design\Data\DataPIC.cs" />
     <Compile Include="Design\Data\DataOutsource.cs" />
+    <Compile Include="Design\Form\Cetak\RptQuotation.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Design\Form\Cetak\RptQuotation.designer.cs">
+      <DependentUpon>RptQuotation.cs</DependentUpon>
+    </Compile>
     <Compile Include="Design\Form\Master\FrmJenisProyek.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -425,6 +431,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>XRDesignRibbonControllerResources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Design\Form\Cetak\RptQuotation.resx">
+      <DependentUpon>RptQuotation.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Design\Form\Master\FrmJenisProyek.resx">
       <DependentUpon>FrmJenisProyek.cs</DependentUpon>
     </EmbeddedResource>
