--- a/Kontenu/packages/repositories.config
+++ b/Kontenu/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Kontenu\packages.config" />
   <repository path="..\OmahSoftware\packages.config" />
 </repositories>
