update setting untuk labs

--- a/Kontenu/Kontenu/App.config
+++ b/Kontenu/Kontenu/App.config
@@ -2,17 +2,17 @@
 <configuration>
     <connectionStrings>
 
-      <!-- -->
+      <!-- 
 <add name="database" connectionString="server=localhost;user id=root; password=; database=osw_kontenu;persist security info=true;CharSet=utf8;default command timeout=0;" />
 <add name="databasereport" connectionString="XpoProvider=MySql;server=localhost;user id=root; password=; database=osw_kontenu;persist security info=true;CharSet=utf8;default command timeout=0;" />
-
-      
-<!-- http://192.168.1.150/installer/ -->
-      
-      <!-- 
-      <add name="database" connectionString="server=192.168.1.121;user id=oswuser; password=omahsoftware123user; database=osw_kontenu; port=3306;persist security info=true;CharSet=utf8;" />
-      <add name="databasereport" connectionString="XpoProvider=MySql;server=192.168.1.121;user id=oswuser; password=omahsoftware123user; port=3306; database=osw_kontenu;persist security info=true;CharSet=utf8;" />
 -->
+      
+<!-- https://labs.sumif.id/kontenu/ -->
+      
+      <!-- -->
+      <add name="database" connectionString="server=sumif.id;user id=desktop; password=ZJR1SqFQ4c6sYcTGqwXO; database=osw_kontenu; port=3306;persist security info=true;CharSet=utf8;" />
+      <add name="databasereport" connectionString="XpoProvider=MySql;server=sumif.id;user id=desktop; password=ZJR1SqFQ4c6sYcTGqwXO; port=3306; database=osw_kontenu;persist security info=true;CharSet=utf8;" />
+
       
     </connectionStrings>
     <startup> 
