--- a/Kontenu/Kontenu/Kontenu.csproj
+++ b/Kontenu/Kontenu/Kontenu.csproj
@@ -23,7 +23,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <InstallUrl>http://192.168.1.121/installer/</InstallUrl>
+    <InstallUrl>https://labs.sumif.id/kontenu/</InstallUrl>
     <TargetCulture>id-ID</TargetCulture>
     <ProductName>Kontenu</ProductName>
     <PublisherName>SUMiF</PublisherName>
